--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   slide_to_act: ^2.0.2
   dropdown_button2: ^2.3.9
   fl_chart: ^1.0.0
+  flutter_image_compress: ^2.4.0
 
 dev_dependencies:
   flutter_test:
