--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   fl_chart: ^1.0.0
   flutter_image_compress: ^2.4.0
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
