--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   fl_chart: ^1.0.0
   flutter_image_compress: ^2.4.0
   video_player: ^2.10.0
+  shimmer_pro: ^0.0.6
 
 dev_dependencies:
   flutter_test:
