--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_image_compress: ^2.4.0
   video_player: ^2.10.0
   shimmer_pro: ^0.0.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
